// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderDetails stories snapshot > CompletedStatus story renders and matches snapshot 1`] = `
<div
  data-section="order-details"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 shadow-sm rounded-none"
    data-slot="card"
  >
    <div
      class="px-6 pt-0 pb-6 space-y-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-start gap-4 sm:flex-row sm:justify-between"
      >
        <div>
          <h1
            class="text-2xl font-semibold"
          >
            Order Details
          </h1>
          <p
            class="mt-1 flex items-center gap-0 text-base font-medium text-muted-foreground"
            data-testid="order-number"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hash size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="4"
                x2="20"
                y1="9"
                y2="9"
              />
              <line
                x1="4"
                x2="20"
                y1="15"
                y2="15"
              />
              <line
                x1="10"
                x2="8"
                y1="3"
                y2="21"
              />
              <line
                x1="16"
                x2="14"
                y1="3"
                y2="21"
              />
            </svg>
            <span>
              INO001
            </span>
          </p>
        </div>
        <span
          class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-status-positive text-white"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mr-1 inline size-3.5"
            data-testid="order-status-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          Completed
        </span>
      </div>
      <div
        aria-hidden="true"
        class="border-t border-muted-foreground/20"
      />
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="lg:col-span-2 space-y-4"
        >
          <h2
            class="text-lg font-semibold"
          >
            Items Ordered
          </h2>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none p-0 overflow-visible"
            data-slot="card"
          >
            <div
              class="p-0"
              data-slot="card-content"
            >
              <div
                class=""
                data-shipment-id="me"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 1
                  </p>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View First Product"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/701643108633M"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <img
                              alt="First Product"
                              class="h-full w-full object-contain"
                              src="https://example.com/product.jpg"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/701643108633M"
                                title="First Product"
                              >
                                First Product
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £61.99"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £61.99
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              First Product
                               
                              Current price: £61.99
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/701643108633M"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="tracking-number"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Tracking Number
                        </p>
                        <p
                          class="mt-2 text-sm font-medium text-foreground break-all"
                        >
                          1234567890
                        </p>
                      </div>
                    </div>
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                John Snow
                              </p>
                            </div>
                            <p>
                              2030 Market street 8th st
                            </p>
                            <p>
                              98121, Seattle, WA, US
                            </p>
                          </div>
                        </div>
                        <p
                          class="mt-2 text-sm text-muted-foreground"
                        >
                          Ground
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <h3
            class="text-lg font-semibold"
          >
            Order Summary
          </h3>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm font-normal leading-5 text-muted-foreground pb-2"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £61.99
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center text-sm font-bold leading-5 text-muted-foreground"
                    >
                      <span>
                        Total
                      </span>
                      <span>
                        £71.38
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetails stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  data-section="order-details"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 shadow-sm rounded-none"
    data-slot="card"
  >
    <div
      class="px-6 pt-0 pb-6 space-y-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-start gap-4 sm:flex-row sm:justify-between"
      >
        <div>
          <h1
            class="text-2xl font-semibold"
          >
            Order Details
          </h1>
          <p
            class="mt-1 flex items-center gap-0 text-base font-medium text-muted-foreground"
            data-testid="order-number"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hash size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="4"
                x2="20"
                y1="9"
                y2="9"
              />
              <line
                x1="4"
                x2="20"
                y1="15"
                y2="15"
              />
              <line
                x1="10"
                x2="8"
                y1="3"
                y2="21"
              />
              <line
                x1="16"
                x2="14"
                y1="3"
                y2="21"
              />
            </svg>
            <span>
              INO001
            </span>
          </p>
        </div>
        <span
          class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-info text-info-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          New
        </span>
      </div>
      <div
        aria-hidden="true"
        class="border-t border-muted-foreground/20"
      />
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="lg:col-span-2 space-y-4"
        >
          <h2
            class="text-lg font-semibold"
          >
            Items Ordered
          </h2>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none p-0 overflow-visible"
            data-slot="card"
          >
            <div
              class="p-0"
              data-slot="card-content"
            >
              <div
                class=""
                data-shipment-id="me"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 1
                  </p>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View First Product"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/701643108633M"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <img
                              alt="First Product"
                              class="h-full w-full object-contain"
                              src="https://example.com/product.jpg"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/701643108633M"
                                title="First Product"
                              >
                                First Product
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £61.99"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £61.99
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              First Product
                               
                              Current price: £61.99
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/701643108633M"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="tracking-number"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Tracking Number
                        </p>
                        <p
                          class="mt-2 text-sm font-medium text-foreground break-all"
                        >
                          1234567890
                        </p>
                      </div>
                    </div>
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                John Snow
                              </p>
                            </div>
                            <p>
                              2030 Market street 8th st
                            </p>
                            <p>
                              98121, Seattle, WA, US
                            </p>
                          </div>
                        </div>
                        <p
                          class="mt-2 text-sm text-muted-foreground"
                        >
                          Ground
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <h3
            class="text-lg font-semibold"
          >
            Order Summary
          </h3>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm font-normal leading-5 text-muted-foreground pb-2"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £61.99
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center text-sm font-bold leading-5 text-muted-foreground"
                    >
                      <span>
                        Total
                      </span>
                      <span>
                        £71.38
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetails stories snapshot > MultipleShipments story renders and matches snapshot 1`] = `
<div
  data-section="order-details"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 shadow-sm rounded-none"
    data-slot="card"
  >
    <div
      class="px-6 pt-0 pb-6 space-y-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-start gap-4 sm:flex-row sm:justify-between"
      >
        <div>
          <h1
            class="text-2xl font-semibold"
          >
            Order Details
          </h1>
          <p
            class="mt-1 flex items-center gap-0 text-base font-medium text-muted-foreground"
            data-testid="order-number"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hash size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="4"
                x2="20"
                y1="9"
                y2="9"
              />
              <line
                x1="4"
                x2="20"
                y1="15"
                y2="15"
              />
              <line
                x1="10"
                x2="8"
                y1="3"
                y2="21"
              />
              <line
                x1="16"
                x2="14"
                y1="3"
                y2="21"
              />
            </svg>
            <span>
              INV002
            </span>
          </p>
        </div>
        <span
          class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-info text-info-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          New
        </span>
      </div>
      <div
        aria-hidden="true"
        class="border-t border-muted-foreground/20"
      />
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="lg:col-span-2 space-y-4"
        >
          <h2
            class="text-lg font-semibold"
          >
            Items Ordered
          </h2>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none p-0 overflow-visible"
            data-slot="card"
          >
            <div
              class="p-0"
              data-slot="card-content"
            >
              <div
                class=""
                data-shipment-id="ship-a"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 1
                  </p>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View Product for Alice"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/prod-a"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <div
                              class="w-full h-full bg-muted rounded-none"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/prod-a"
                                title="Product for Alice"
                              >
                                Product for Alice
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £0.00"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £0.00
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              Product for Alice
                               
                              Current price: £0.00
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/prod-a"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                Alice Smith
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-t border-muted-foreground/20"
                data-shipment-id="ship-b"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 2
                  </p>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View Product for Bob"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/prod-b"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <div
                              class="w-full h-full bg-muted rounded-none"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/prod-b"
                                title="Product for Bob"
                              >
                                Product for Bob
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £0.00"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £0.00
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              Product for Bob
                               
                              Current price: £0.00
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/prod-b"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                Bob Jones
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <h3
            class="text-lg font-semibold"
          >
            Order Summary
          </h3>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm font-normal leading-5 text-muted-foreground pb-2"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £30.00
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center text-sm font-bold leading-5 text-muted-foreground"
                    >
                      <span>
                        Total
                      </span>
                      <span>
                        £30.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetails stories snapshot > ReplacedStatus story renders and matches snapshot 1`] = `
<div
  data-section="order-details"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 shadow-sm rounded-none"
    data-slot="card"
  >
    <div
      class="px-6 pt-0 pb-6 space-y-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-start gap-4 sm:flex-row sm:justify-between"
      >
        <div>
          <h1
            class="text-2xl font-semibold"
          >
            Order Details
          </h1>
          <p
            class="mt-1 flex items-center gap-0 text-base font-medium text-muted-foreground"
            data-testid="order-number"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hash size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="4"
                x2="20"
                y1="9"
                y2="9"
              />
              <line
                x1="4"
                x2="20"
                y1="15"
                y2="15"
              />
              <line
                x1="10"
                x2="8"
                y1="3"
                y2="21"
              />
              <line
                x1="16"
                x2="14"
                y1="3"
                y2="21"
              />
            </svg>
            <span>
              INO001
            </span>
          </p>
        </div>
        <span
          class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-status-positive text-white"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mr-1 inline size-3.5"
            data-testid="order-status-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          Replaced
        </span>
      </div>
      <div
        aria-hidden="true"
        class="border-t border-muted-foreground/20"
      />
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="lg:col-span-2 space-y-4"
        >
          <h2
            class="text-lg font-semibold"
          >
            Items Ordered
          </h2>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none p-0 overflow-visible"
            data-slot="card"
          >
            <div
              class="p-0"
              data-slot="card-content"
            >
              <div
                class=""
                data-shipment-id="me"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 1
                  </p>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View First Product"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/701643108633M"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <img
                              alt="First Product"
                              class="h-full w-full object-contain"
                              src="https://example.com/product.jpg"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/701643108633M"
                                title="First Product"
                              >
                                First Product
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £61.99"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £61.99
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              First Product
                               
                              Current price: £61.99
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/701643108633M"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="tracking-number"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Tracking Number
                        </p>
                        <p
                          class="mt-2 text-sm font-medium text-foreground break-all"
                        >
                          1234567890
                        </p>
                      </div>
                    </div>
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                John Snow
                              </p>
                            </div>
                            <p>
                              2030 Market street 8th st
                            </p>
                            <p>
                              98121, Seattle, WA, US
                            </p>
                          </div>
                        </div>
                        <p
                          class="mt-2 text-sm text-muted-foreground"
                        >
                          Ground
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <h3
            class="text-lg font-semibold"
          >
            Order Summary
          </h3>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm font-normal leading-5 text-muted-foreground pb-2"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £61.99
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center text-sm font-bold leading-5 text-muted-foreground"
                    >
                      <span>
                        Total
                      </span>
                      <span>
                        £71.38
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetails stories snapshot > WithPaymentMethod story renders and matches snapshot 1`] = `
<div
  data-section="order-details"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 shadow-sm rounded-none"
    data-slot="card"
  >
    <div
      class="px-6 pt-0 pb-6 space-y-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-start gap-4 sm:flex-row sm:justify-between"
      >
        <div>
          <h1
            class="text-2xl font-semibold"
          >
            Order Details
          </h1>
          <p
            class="mt-1 flex items-center gap-0 text-base font-medium text-muted-foreground"
            data-testid="order-number"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hash size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="4"
                x2="20"
                y1="9"
                y2="9"
              />
              <line
                x1="4"
                x2="20"
                y1="15"
                y2="15"
              />
              <line
                x1="10"
                x2="8"
                y1="3"
                y2="21"
              />
              <line
                x1="16"
                x2="14"
                y1="3"
                y2="21"
              />
            </svg>
            <span>
              INO001
            </span>
          </p>
        </div>
        <span
          class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-info text-info-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          New
        </span>
      </div>
      <div
        aria-hidden="true"
        class="border-t border-muted-foreground/20"
      />
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="lg:col-span-2 space-y-4"
        >
          <h2
            class="text-lg font-semibold"
          >
            Items Ordered
          </h2>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none p-0 overflow-visible"
            data-slot="card"
          >
            <div
              class="p-0"
              data-slot="card-content"
            >
              <div
                class=""
                data-shipment-id="me"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 1
                  </p>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View First Product"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/701643108633M"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <img
                              alt="First Product"
                              class="h-full w-full object-contain"
                              src="https://example.com/product.jpg"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/701643108633M"
                                title="First Product"
                              >
                                First Product
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £61.99"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £61.99
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              First Product
                               
                              Current price: £61.99
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/701643108633M"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="tracking-number"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Tracking Number
                        </p>
                        <p
                          class="mt-2 text-sm font-medium text-foreground break-all"
                        >
                          1234567890
                        </p>
                      </div>
                    </div>
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                John Snow
                              </p>
                            </div>
                            <p>
                              2030 Market street 8th st
                            </p>
                            <p>
                              98121, Seattle, WA, US
                            </p>
                          </div>
                        </div>
                        <p
                          class="mt-2 text-sm text-muted-foreground"
                        >
                          Ground
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <h3
            class="text-lg font-semibold"
          >
            Order Summary
          </h3>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm font-normal leading-5 text-muted-foreground pb-2"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £61.99
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center text-sm font-bold leading-5 text-muted-foreground"
                    >
                      <span>
                        Total
                      </span>
                      <span>
                        £71.38
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-1.5"
          >
            <p
              class="text-xs font-semibold text-foreground"
            >
              Payment Method
            </p>
            <div
              class="text-card-foreground flex flex-col gap-6 shadow-sm rounded-none p-0 bg-card border border-border"
              data-card="payment-method"
              data-slot="card"
            >
              <div
                class="p-3 py-2"
                data-slot="card-content"
              >
                <ul
                  class="text-sm font-medium text-muted-foreground space-y-1 list-none"
                >
                  <li>
                    Visa Ending in 4242
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetails stories snapshot > WithShippingStatus story renders and matches snapshot 1`] = `
<div
  data-section="order-details"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 shadow-sm rounded-none"
    data-slot="card"
  >
    <div
      class="px-6 pt-0 pb-6 space-y-6"
      data-slot="card-content"
    >
      <div
        class="flex flex-col items-start gap-4 sm:flex-row sm:justify-between"
      >
        <div>
          <h1
            class="text-2xl font-semibold"
          >
            Order Details
          </h1>
          <p
            class="mt-1 flex items-center gap-0 text-base font-medium text-muted-foreground"
            data-testid="order-number"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hash size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="4"
                x2="20"
                y1="9"
                y2="9"
              />
              <line
                x1="4"
                x2="20"
                y1="15"
                y2="15"
              />
              <line
                x1="10"
                x2="8"
                y1="3"
                y2="21"
              />
              <line
                x1="16"
                x2="14"
                y1="3"
                y2="21"
              />
            </svg>
            <span>
              INO001
            </span>
          </p>
        </div>
        <span
          class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-info text-info-foreground"
          data-slot="badge"
          data-testid="order-status-badge"
        >
          New
        </span>
      </div>
      <div
        aria-hidden="true"
        class="border-t border-muted-foreground/20"
      />
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="lg:col-span-2 space-y-4"
        >
          <h2
            class="text-lg font-semibold"
          >
            Items Ordered
          </h2>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none p-0 overflow-visible"
            data-slot="card"
          >
            <div
              class="p-0"
              data-slot="card-content"
            >
              <div
                class=""
                data-shipment-id="me"
              >
                <div
                  class="px-3 py-2 bg-muted rounded-none flex flex-nowrap items-center justify-between gap-2"
                >
                  <p
                    class="text-sm min-w-0 font-medium"
                  >
                    Shipment 1
                  </p>
                  <span
                    class="inline-flex items-center justify-center px-2 text-xs whitespace-nowrap [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 shrink-0 font-semibold border-0 py-1 rounded-none w-fit border-transparent bg-status-positive text-white"
                    data-slot="badge"
                    data-testid="shipping-status-badge"
                  >
                    Shipped
                  </span>
                </div>
                <div
                  class="p-3"
                >
                  <ul
                    class="space-y-4"
                  >
                    <li
                      data-testid="order-item"
                    >
                      <div
                        class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 transition-colors hover:bg-muted/50 sm:flex-row sm:items-center"
                      >
                        <a
                          aria-label="View First Product"
                          class="flex-shrink-0 block"
                          data-discover="true"
                          href="/RefArchGlobal/en-GB/product/701643108633M"
                        >
                          <div
                            class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
                          >
                            <img
                              alt="First Product"
                              class="h-full w-full object-contain"
                              src="https://example.com/product.jpg"
                            />
                          </div>
                        </a>
                        <div
                          class="min-w-0 flex-1 space-y-1"
                        >
                          <div
                            class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                          >
                            <h2
                              class="text-left text-xl font-semibold leading-7 tracking-[-0.5px] text-card-foreground min-w-0 flex-1"
                            >
                              <a
                                class="hover:text-primary block break-words"
                                data-discover="true"
                                href="/RefArchGlobal/en-GB/product/701643108633M"
                                title="First Product"
                              >
                                First Product
                              </a>
                            </h2>
                          </div>
                          <div />
                          <p
                            class="text-xs text-muted-foreground"
                          >
                            Qty: 1
                          </p>
                          <div
                            class="pt-1"
                          />
                        </div>
                        <div
                          class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
                        >
                          <div
                            class="items-center gap-2"
                          >
                            <span
                              aria-label="Current price: £61.99"
                              aria-live="polite"
                              class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
                            >
                              £61.99
                            </span>
                            <span
                              aria-atomic="true"
                              aria-live="polite"
                              class="sr-only"
                            >
                              First Product
                               
                              Current price: £61.99
                            </span>
                             
                          </div>
                          <a
                            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
                            data-discover="true"
                            data-size="sm"
                            data-slot="button"
                            data-variant="default"
                            href="/RefArchGlobal/en-GB/product/701643108633M"
                          >
                            Buy Again
                          </a>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-2 border-t border-muted-foreground/20 pt-4 px-3 pb-3 mx-3"
                >
                  <div
                    class="grid grid-cols-1 sm:grid-cols-2 gap-3"
                  >
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="tracking-number"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Tracking Number
                        </p>
                        <p
                          class="mt-2 text-sm font-medium text-foreground break-all"
                        >
                          1234567890
                        </p>
                      </div>
                    </div>
                    <div
                      class="text-card-foreground flex flex-col gap-6 border shadow-sm rounded-none min-h-[4rem] p-0 bg-card"
                      data-card="shipping-address"
                      data-slot="card"
                    >
                      <div
                        class="p-3"
                        data-slot="card-content"
                      >
                        <p
                          class="text-xs font-semibold text-foreground"
                        >
                          Shipping Address
                        </p>
                        <div
                          class="mt-2"
                        >
                          <div
                            class="text-sm font-normal leading-5 text-foreground"
                          >
                            <div>
                              <p>
                                John Snow
                              </p>
                            </div>
                            <p>
                              2030 Market street 8th st
                            </p>
                            <p>
                              98121, Seattle, WA, US
                            </p>
                          </div>
                        </div>
                        <p
                          class="mt-2 text-sm text-muted-foreground"
                        >
                          Ground
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <h3
            class="text-lg font-semibold"
          >
            Order Summary
          </h3>
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm font-normal leading-5 text-muted-foreground pb-2"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £61.99
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center text-sm font-bold leading-5 text-muted-foreground"
                    >
                      <span>
                        Total
                      </span>
                      <span>
                        £71.38
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
